[gd_scene load_steps=45 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=10]
[ext_resource path="res://Enemies/emotes.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.96558
height = 8.06884

[sub_resource type="CircleShape2D" id=10]
radius = 54.0093

[sub_resource type="CircleShape2D" id=11]
radius = 4.0

[sub_resource type="CircleShape2D" id=12]
radius = 6.0

[sub_resource type="Animation" id=13]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 11 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "Angry",
"speed": 2.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "Confused",
"speed": 2.0
} ]

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
animation = "Fly"
frame = 3
playing = true
offset = Vector2( 0, -12 )

[node name="SmallShadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.00577, 1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2
exp_worth = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.219608 )
shape = SubResource( 10 )

[node name="EnemyHitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="EnemyHitbox" index="0"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -15 )
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 13 )
anims/Stop = SubResource( 14 )

[node name="Emote" type="AnimatedSprite" parent="."]
position = Vector2( 0, -29 )
frames = SubResource( 22 )
animation = "Idle"
frame = 5
playing = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Area2D_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="health_changed" from="Stats" to="." method="_on_Stats_health_changed"]
[connection signal="animation_finished" from="Emote" to="." method="_on_Emote_animation_finished"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="EnemyHitbox"]

[editable path="SoftCollision"]
